added placeholder content

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <a
       class="navbar-brand fs-4"
-      style="color: royalblue; font-weight: bold; font-style: italic"
+      style="font-weight: bold; font-style: italic"
       href="#"
       >Read Reading Read</a
     >
