--- a/src/app/base/base.component.html
+++ b/src/app/base/base.component.html
@@ -1,13 +1,9 @@
 <!-- Masthead-->
 <header class="container-fluid">
   <div class="cover">
-    <div class="wrapper left">
-      <h3 class="tagline">Welcom to Read Reading Read.</h3>
-    </div>
-    <div class="wrapper right">
-      <h4>Read</h4>
-      <h4>Discover</h4>
-      <h4>Share</h4>
+    <div class="wrapper">
+      <h1 class="tagline">Welcom to Read Reading Read.</h1>
+      <h1>Greatest books, waiting to be discovered.</h1>
     </div>
   </div>
 </header>
