--- a/src/app/base/base.component.scss
+++ b/src/app/base/base.component.scss
@@ -5,10 +5,10 @@
 }
 .wrapper {
   text-align: center;
-  width: 90%;
+  width: 100%;
   color: white;
-  backdrop-filter: blur(20px);
-  background-color: rgba(200, 223, 200, 0.3);
+  // backdrop-filter: blur(20px);
+  // background-color: rgba(200, 223, 200, 0.3);
   margin: 1em;
   padding: 2em;
 }
@@ -17,10 +17,8 @@
   padding-top: 77px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 header {
-  background: url("https://images.unsplash.com/photo-1533563906091-fdfdffc3e3c4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
   background-repeat: no-repeat;
   background-size: cover;
 }
