--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background: linear-gradient(to top left, #28b487, #7dd56f);
+  .clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+}
