added admin module, with add book and authors and remove components

--- a/src/app/base/base.component.html
+++ b/src/app/base/base.component.html
@@ -2,7 +2,7 @@
 <header class="container-fluid">
   <div class="cover">
     <div class="wrapper">
-      <h1 class="tagline">Welcom to Read Reading Read.</h1>
+      <h1 class="tagline">Welcome to Read Reading Read.</h1>
       <h1>Greatest books, waiting to be discovered.</h1>
     </div>
   </div>
