--- a/src/app/base/authors/authors.component.html
+++ b/src/app/base/authors/authors.component.html
@@ -9,7 +9,9 @@
           <!-- Product image-->
           <img
             class="card-img-top"
-            src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+            width="150px"
+            height="350px"
+            src="{{ authors.image }}"
             alt="..."
           />
           <!-- Product details-->
@@ -26,7 +28,7 @@
             <div class="text-center">
               <a
                 class="btn btn-outline-dark mt-auto"
-                href="home/authors/view-author/{{ authors.authid }}"
+                href="home/authors/view-author/{{ authors.id }}"
                 >View options</a
               >
             </div>
