specific book and author page view done

--- a/src/app/base/books/books.component.html
+++ b/src/app/base/books/books.component.html
@@ -2,8 +2,8 @@
 <div class="card-top container-fluid">
   <div class="container genere d-flex justify-content-start pb-1 pt-1">
     <!--  -->
-    <div class="item btn btn-outline-success">
-      <a (click)="filter('')">
+    <div class="item">
+      <a class="btn btn-outline-success" (click)="filter('')">
         <div class="linkbtn">
           <h6>List all</h6>
         </div>
@@ -11,8 +11,8 @@
     </div>
     <!--  -->
     <!--  -->
-    <div class="item btn btn-outline-success">
-      <a (click)="filter('a')">
+    <div class="item">
+      <a class="btn btn-outline-success" (click)="filter('a')">
         <div class="linkbtn">
           <h6>Adventure</h6>
         </div>
@@ -20,8 +20,8 @@
     </div>
     <!--  -->
     <!--  -->
-    <div class="item btn btn-outline-success">
-      <a (click)="filter('h')">
+    <div class="item">
+      <a class="btn btn-outline-success" (click)="filter('h')">
         <div class="linkbtn">
           <h6>Horror</h6>
         </div>
@@ -29,8 +29,8 @@
     </div>
     <!--  -->
     <!--  -->
-    <div class="item btn btn-outline-success">
-      <a (click)="filter('t')">
+    <div class="item">
+      <a class="btn btn-outline-success" (click)="filter('t')">
         <div class="linkbtn">
           <h6>Thriller</h6>
         </div>
@@ -38,8 +38,8 @@
     </div>
     <!--  -->
     <!--  -->
-    <div class="item btn btn-outline-success">
-      <a (click)="filter('r')">
+    <div class="item">
+      <a class="btn btn-outline-success" (click)="filter('r')">
         <div class="linkbtn">
           <h6>Romance</h6>
         </div>
@@ -56,7 +56,10 @@
       class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
     >
       <!-- TILE -->
-      <div class="col mb-5" *ngFor="let books of filterCategory">
+      <div
+        class="col mb-5"
+        *ngFor="let books of filterCategory | filter: searchKey:'title'"
+      >
         <div class="card h-100">
           <!-- Product image-->
           <img
