--- a/src/app/base/books/books.component.scss
+++ b/src/app/base/books/books.component.scss
@@ -3,7 +3,11 @@
   // padding: 10px;
   // gap: 20px;
 }
+h6 {
+  padding-top: 5px;
+}
 .btn-outline-success {
+  border-radius: 30px;
   width: 100px;
   color: black;
   border: none;
@@ -25,6 +29,11 @@ a {
 
 @media only screen and (max-width: 600px) {
   .genere {
-    justify-content: center;
+    padding: 0;
+    margin: 0;
+    justify-content: flex-start;
+  }
+  h6 {
+    padding: 0px;
   }
 }
