--- a/src/app/base/view-book/view-book.component.html
+++ b/src/app/base/view-book/view-book.component.html
@@ -4,23 +4,22 @@
     <div class="row gx-4 gx-lg-5 align-items-center">
       <div class="col-md-6">
         <img
-          class="card-img-top mb-5 mb-md-0"
-          src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg"
+          class="card-img-top mb-5 mb-md-0 w-75"
+          src="{{ bookData.image }}"
+          width="100px"
+          height="600px"
           alt="..."
         />
       </div>
       <div class="col-md-6">
-        <div class="small mb-1">SKU: BST-498</div>
-        <h1 class="display-5 fw-bolder">Shop item template</h1>
+        <div class="small mb-1">{{ bookData.id }}</div>
+        <h1 class="display-5 fw-bolder">{{ bookData.title }}</h1>
         <div class="fs-5 mb-5">
-          <span class="text-decoration-line-through">$45.00</span>
-          <span>$40.00</span>
+          <!-- <span class="text-decoration-line-through"></span> -->
+          <span>{{ bookData.price }} Rs</span>
         </div>
         <p class="lead">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-          at dolorem quidem modi. Nam sequi consequatur obcaecati excepturi
-          alias magni, accusamus eius blanditiis delectus ipsam minima ea iste
-          laborum vero?
+          {{ bookData.disc }}
         </p>
         <div class="d-flex">
           <input
