--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -21,21 +21,37 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="home">Home</a>
+          <a
+            class="nav-link btn btn-outline-light"
+            aria-current="page"
+            href="home"
+            >Home</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="home/authors"
+          <a
+            class="nav-link btn btn-outline-light"
+            aria-current="page"
+            href="home/authors"
             >Authors</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="home/books">Books</a>
+          <a
+            class="nav-link btn btn-outline-light"
+            aria-current="page"
+            href="home/books"
+            >Books</a
+          >
         </li>
       </ul>
       <form class="d-flex" role="search">
         <input
+          [(ngModel)]="searchTerm"
+          name="searchTerm"
+          (keyup)="search($event)"
           class="form-control me-2"
-          type="search"
+          type="text"
           placeholder="Search"
           aria-label="Search"
         />
