--- a/src/app/base/home/home.component.html
+++ b/src/app/base/home/home.component.html
@@ -1,1 +1,227 @@
-<p>home works!</p>
+<!-- Header-->
+<header class="bg-dark py-5">
+  <div class="container px-5">
+    <div class="row gx-5 align-items-center justify-content-center">
+      <div class="col-lg-8 col-xl-7 col-xxl-6">
+        <div class="my-5 text-center text-xl-start">
+          <h1 class="display-5 fw-bolder text-white mb-2">
+            Discover your new favourite books
+          </h1>
+          <p class="lead fw-normal text-white-50 mb-4">
+            add it to your collection.
+          </p>
+          <div
+            class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start"
+          >
+            <a
+              class="btn btn-outline-info text-light btn-lg px-4 me-sm-3"
+              href="/home/books"
+              >View all books</a
+            >
+            <a
+              class="btn btn-outline-info text-light btn-lg px-4"
+              href="/home/authors"
+              >View all authors</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
+        <img
+          class="img-fluid rounded-3 my-5"
+          src="https://images.pexels.com/photos/159711/books-bookstore-book-reading-159711.jpeg?auto=compress&cs=tinysrgb&w=600"
+          alt="books"
+        />
+      </div>
+    </div>
+  </div>
+</header>
+
+<!-- Testimonial section-->
+<div class="py-5 bg-light">
+  <div class="container px-5 my-5">
+    <div class="row gx-5 justify-content-center">
+      <div class="col-lg-10 col-xl-7">
+        <div class="text-center">
+          <div class="fs-4 mb-4 fst-italic">
+            "A reader lives a thousand lives before he dies . . . The man who
+            never reads lives only one.”"
+          </div>
+          <div class="d-flex align-items-center justify-content-center">
+            <img
+              class="rounded-circle me-3"
+              width="40px"
+              height="40px"
+              src="https://i.postimg.cc/sDL9p28w/Portrait-photoshoot-at-Worldcon-75-Helsinki-before-the-Hugo-Awards-George-R-R-Martin.jpg"
+              alt="George R R Martin"
+            />
+            <div class="fw-bold">
+              George R.R. Martin
+              <span class="fw-bold text-primary mx-1">/</span>
+              American novelist
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Blog preview section-->
+<section class="py-5">
+  <div class="container px-5 my-5">
+    <div class="row gx-5 justify-content-center">
+      <div class="col-lg-8 col-xl-6">
+        <div class="text-center">
+          <h2 class="fw-bolder">Featured books</h2>
+          <p class="lead fw-normal text-muted mb-5">Bestsellers of the year.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row gx-5">
+      <div class="col-lg-4 mb-5">
+        <div class="card h-100 shadow border-0">
+          <img
+            class="card-img-top"
+            src="https://i.postimg.cc/TPkwXhzg/metroC.jpg"
+            alt="..."
+          />
+          <div class="card-body p-4">
+            <a class="text-decoration-none link-dark stretched-link" href="#!"
+              ><h5 class="card-title mb-3">Blog post title</h5></a
+            >
+            <p class="card-text mb-0">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+          <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+            <div class="d-flex align-items-end justify-content-between">
+              <div class="d-flex align-items-center">
+                <img
+                  class="rounded-circle me-3"
+                  src="https://dummyimage.com/40x40/ced4da/6c757d"
+                  alt="..."
+                />
+                <div class="small">
+                  <div class="fw-bold">Kelly Rowan</div>
+                  <div class="text-muted">
+                    March 12, 2022 &middot; 6 min read
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-5">
+        <div class="card h-100 shadow border-0">
+          <img
+            class="card-img-top"
+            src="https://i.postimg.cc/85jCkNG3/readyplayer-C.jpg"
+            alt="..."
+          />
+          <div class="card-body p-4">
+            <a class="text-decoration-none link-dark stretched-link" href="#!"
+              ><h5 class="card-title mb-3">Another blog post title</h5></a
+            >
+            <p class="card-text mb-0">
+              This text is a bit longer to illustrate the adaptive height of
+              each card. Some quick example text to build on the card title and
+              make up the bulk of the card's content.
+            </p>
+          </div>
+          <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+            <div class="d-flex align-items-end justify-content-between">
+              <div class="d-flex align-items-center">
+                <img
+                  class="rounded-circle me-3"
+                  src="https://dummyimage.com/40x40/ced4da/6c757d"
+                  alt="..."
+                />
+                <div class="small">
+                  <div class="fw-bold">Josiah Barclay</div>
+                  <div class="text-muted">
+                    March 23, 2022 &middot; 4 min read
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-5">
+        <div class="card h-100 shadow border-0">
+          <img
+            class="card-img-top"
+            src="https://i.postimg.cc/CKM1tbQw/duneC.jpg"
+            alt="..."
+          />
+          <div class="card-body p-4">
+            <a class="text-decoration-none link-dark stretched-link" href="#!"
+              ><h5 class="card-title mb-3">
+                The last blog post title is a little bit longer than the others
+              </h5></a
+            >
+            <p class="card-text mb-0">
+              Some more quick example text to build on the card title and make
+              up the bulk of the card's content.
+            </p>
+          </div>
+          <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+            <div class="d-flex align-items-end justify-content-between">
+              <div class="d-flex align-items-center">
+                <img
+                  class="rounded-circle me-3"
+                  src="https://dummyimage.com/40x40/ced4da/6c757d"
+                  alt="..."
+                />
+                <div class="small">
+                  <div class="fw-bold">Evelyn Martinez</div>
+                  <div class="text-muted">
+                    April 2, 2022 &middot; 10 min read
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Call to action-->
+    <aside class="bg-primary bg-gradient rounded-3 p-4 p-sm-5 mt-5">
+      <div
+        class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start"
+      >
+        <div class="mb-4 mb-xl-0">
+          <div class="fs-3 fw-bold text-white">
+            New products, delivered to you.
+          </div>
+          <div class="text-white-50">
+            Sign up for our newsletter for the latest updates.
+          </div>
+        </div>
+        <div class="ms-xl-4">
+          <div class="input-group mb-2">
+            <input
+              class="form-control"
+              type="text"
+              placeholder="Email address..."
+              aria-label="Email address..."
+              aria-describedby="button-newsletter"
+            />
+            <button
+              class="btn btn-outline-light"
+              id="button-newsletter"
+              type="button"
+            >
+              Sign up
+            </button>
+          </div>
+          <div class="small text-white-50">
+            We care about privacy, and will never share your data.
+          </div>
+        </div>
+      </div>
+    </aside>
+  </div>
+</section>
