search functionality added

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -55,7 +55,13 @@
           placeholder="Search"
           aria-label="Search"
         />
-        <button class="btn btn-outline-light" type="submit">Search</button>
+        <button
+          (click)="searchbtn()"
+          class="btn btn-outline-light"
+          type="submit"
+        >
+          Search
+        </button>
       </form>
     </div>
   </div>
