--- a/src/app/base/base.component.html
+++ b/src/app/base/base.component.html
@@ -4,6 +4,9 @@
     <div class="wrapper">
       <h1 class="tagline">Welcome to Read Reading Read.</h1>
       <h1>Greatest books, waiting to be discovered.</h1>
+      <a class="btn btn-success btn-lg mt-5 ps-5 pe-5 pt-3 pb-3" href="/home"
+        >Start</a
+      >
     </div>
   </div>
 </header>
