--- a/src/app/base/home/home.component.html
+++ b/src/app/base/home/home.component.html
@@ -14,14 +14,14 @@
             class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start"
           >
             <a
-              class="btn btn-outline-info text-light btn-lg px-4 me-sm-3"
-              href="/home/books"
-              >View all books</a
-            >
-            <a
               class="btn btn-outline-info text-light btn-lg px-4"
               href="/home/authors"
               >View all authors</a
+            >
+            <a
+              class="btn btn-outline-info text-light btn-lg px-4 me-sm-3"
+              href="/home/books"
+              >View all books</a
             >
           </div>
         </div>
@@ -87,11 +87,13 @@
           />
           <div class="card-body p-4">
             <a class="text-decoration-none link-dark stretched-link" href="#!"
-              ><h5 class="card-title mb-3">Blog post title</h5></a
+              ><h5 class="card-title mb-3">Metro 2033</h5></a
             >
             <p class="card-text mb-0">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Metro 2033 (Russian: Метро 2033) is a 2002 post-apocalyptic
+              fiction novel by Russian author Dmitry Glukhovsky. It is set
+              within the Moscow Metro, where the last survivors hide after a
+              global nuclear holocaust.
             </p>
           </div>
           <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -103,7 +105,7 @@
                   alt="..."
                 />
                 <div class="small">
-                  <div class="fw-bold">Kelly Rowan</div>
+                  <div class="fw-bold">Dmitry Glukhovsky</div>
                   <div class="text-muted">
                     March 12, 2022 &middot; 6 min read
                   </div>
@@ -122,12 +124,14 @@
           />
           <div class="card-body p-4">
             <a class="text-decoration-none link-dark stretched-link" href="#!"
-              ><h5 class="card-title mb-3">Another blog post title</h5></a
+              ><h5 class="card-title mb-3">Ready Player One</h5></a
             >
             <p class="card-text mb-0">
-              This text is a bit longer to illustrate the adaptive height of
-              each card. Some quick example text to build on the card title and
-              make up the bulk of the card's content.
+              Ready Player One is a 2011 science fiction novel, and the debut
+              novel of American author Ernest Cline. The story, set in a
+              dystopia in 2045, follows protagonist Wade Watts on his search for
+              an Easter egg in a worldwide virtual reality game, the discovery
+              of which would lead him to inherit the game creator's fortune.
             </p>
           </div>
           <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -139,7 +143,7 @@
                   alt="..."
                 />
                 <div class="small">
-                  <div class="fw-bold">Josiah Barclay</div>
+                  <div class="fw-bold">Ernest Cline</div>
                   <div class="text-muted">
                     March 23, 2022 &middot; 4 min read
                   </div>
@@ -158,13 +162,15 @@
           />
           <div class="card-body p-4">
             <a class="text-decoration-none link-dark stretched-link" href="#!"
-              ><h5 class="card-title mb-3">
-                The last blog post title is a little bit longer than the others
-              </h5></a
+              ><h5 class="card-title mb-3">Dune</h5></a
             >
             <p class="card-text mb-0">
-              Some more quick example text to build on the card title and make
-              up the bulk of the card's content.
+              Set on the desert planet Arrakis, Dune is the story of the boy
+              Paul Atreides, heir to a noble family tasked with ruling an
+              inhospitable world where the only thing of value is the “spice”
+              melange, a drug capable of extending life and enhancing
+              consciousness. Coveted across the known universe, melange is a
+              prize worth killing for...
             </p>
           </div>
           <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -176,7 +182,7 @@
                   alt="..."
                 />
                 <div class="small">
-                  <div class="fw-bold">Evelyn Martinez</div>
+                  <div class="fw-bold">Frank Herbert</div>
                   <div class="text-muted">
                     April 2, 2022 &middot; 10 min read
                   </div>
@@ -188,7 +194,7 @@
       </div>
     </div>
     <!-- Call to action-->
-    <aside class="bg-primary bg-gradient rounded-3 p-4 p-sm-5 mt-5">
+    <aside class="bg-dark bg-gradient rounded-3 p-4 p-sm-5 mt-5">
       <div
         class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start"
       >
